--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,54 +1,92 @@
 {
-	"env": {
-	  "es6": true,
-	  "node": true
-	},
-	"extends": [
-	  "airbnb-base",
-	  "plugin:@typescript-eslint/recommended",
-	  "prettier",
-	  "plugin:prettier/recommended"
-	],
-	"globals": {
-	  "Atomics": "readonly",
-	  "SharedArrayBuffer": "readonly"
-	},
-	"parser": "@typescript-eslint/parser",
-	"parserOptions": {
-	  "ecmaVersion": 2018,
-	  "sourceType": "module"
-	},
-	"plugins": [
-	  "@typescript-eslint",
-	  "prettier"
-	],
-	"rules": {
-	  "no-console": "off",
-	  "import/prefer-default-export": "off",
-	  "prettier/prettier": "error",
-	  "import/extensions": [
-		"error",
-		"ignorePackages",
-		{
-		  "ts": "never"
-		}
-	  ],
-	  "camelcase": "off",
-	  "no-use-before-define": "off",
-	  "@typescript-eslint/no-use-before-define": [
-		"error"
-	  ],
-	  "@typescript-eslint/no-unused-vars": ["error", {
-		"argsIgnorePattern": "_"
-	  }],
-	  "class-methods-use-this": "off",
-	  "no-useless-constructor": "off"
-	},
-	"settings": {
-	  "import/resolver": {
-		"node": {
-			"extensions": [".js", ".jsx", ".ts", ".tsx"]
-		  }
-	  }
-	}
-  }
+    "env": {
+        "es2021": true,
+        "node": true,
+        "jest": true
+    },
+    "extends": [
+        "airbnb-base",
+        "plugin:@typescript-eslint/recommended",
+        "prettier",
+        "plugin:prettier/recommended"
+    ],
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": 13,
+        "sourceType": "module"
+    },
+    "plugins": [
+        "@typescript-eslint",
+        "prettier",
+        "eslint-plugin-import-helpers"
+    ],
+    "rules": {
+        "camelcase": "off",
+        "prettier/prettier": "error",
+        "import/no-unresolved": "error",
+        "@typescript-eslint/naming-convention": [
+            "error",
+            {
+                "selector": "interface",
+                "format": [
+                    "PascalCase"
+                ],
+                "custom": {
+                    "regex": "^I[A-Z]",
+                    "match": true
+                }
+            }
+        ],
+        "class-methods-use-this": "off",
+        "import/prefer-default-export": "off",
+        "no-shadow": "off",
+        "no-console": "off",
+        "no-useless-constructor": "off",
+        "no-empty-function": "off",
+        "lines-between-class-members": "off",
+        "import/extensions": [
+            "error",
+            "ignorePackages",
+            {
+                "ts": "never"
+            }
+        ],
+        "import-helpers/order-imports": [
+            "warn",
+            {
+                "newlinesBetween": "always",
+                "groups": [
+                    "module",
+                    "/^@/",
+                    [
+                        "parent",
+                        "sibling",
+                        "index"
+                    ]
+                ],
+                "alphabetize": {
+                    "order": "asc",
+                    "ignoreCase": true
+                }
+            }
+        ],
+        "import/no-extraneous-dependencies": [
+            "error",
+            {
+                "devDependencies": [
+                    "**/*.spec.js"
+                ]
+            }
+        ]
+    },
+    "settings": {
+        "import/resolver": {
+            "typescript": {},
+            "node": {
+                "extensions": [
+                    ".ts"
+                ]
+            }
+        }
+    }
+}
