--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,13 +1,13 @@
 {
   "type": "postgres",
+  "port": 5432,
   "host": "localhost",
-  "port":5432,
   "username": "docker",
   "password": "ignite",
   "database": "dbRentalx",
-  "entities": ["./src/modules/**/entities/*.ts"],
-  "migrations": ["./src/database/migrations/*.ts"],
-  "cli": {
-    "migrationsDir": "./src/database/migrations"
+  "entities": ["./src/modules/**/infra/typeorm/entities/*.ts"],
+  "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
+  "cli":{
+    "migrationsDir": "./src/shared/infra/typeorm/migrations"
   }
 }
